ZCS-10704:Addressed review comments related to Username variable change and indentation

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1195,6 +1195,7 @@ NAD_Remove = Elimina
 NAD_ForwardTo = Reenvia el correu a
 NAD_COSName = Nom de classe de servei
 NAD_PwdLocked = Evita que l\u2019usuari canvi\u00ef la contrasenya
+NAD_AllowUsernameInPassword = Permet el nom d\u0027usuari a la contrasenya
 NAD_ResetToCOS = Restableix al valor de la classe de servei
 NAD_OverrideCOS = Sobreescriu la classe de servei
 NAD_ResetToGlobal = Restableix al valor global
@@ -1770,6 +1771,7 @@ ERROR_dlWithThisNameExists = Ja existeix una llista de correu, un recurs, un \u0
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Error! El temps de retenci\u00f3 dels missatges ha de ser m\u00e9s de 30 dies.
 ERROR_PASSWORD_REQUIRED = Cal que indiqueu una contrasenya
 ERROR_PASSWORD_MISMATCH = Les contrasenyes no coincideixen!
+ERROR_PASSWORD_CONTAIN_USERNAME = La contrasenya no pot contenir el nom d\u0027usuari.
 ERROR_PASSWORD_TOOLONG = La contrasenya \u00e9s massa llarga
 ERROR_PASSWORD_TOOSHORT = La contrasenya \u00e9s massa curta
 ERROR_PASSWORD_INVALID = La contrasenya no \u00e9s v\u00e0lida
