--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -1169,6 +1169,7 @@ NAD_Remove = Fjern
 NAD_ForwardTo = Videresend mail til
 NAD_COSName = COS-navn
 NAD_PwdLocked = Undg\u00e5, at brugeren skifter adgangskode
+NAD_AllowUsernameInPassword = Tillad brugernavn i adgangskode
 NAD_ResetToCOS = Nulstil til COS-v\u00e6rdi
 NAD_OverrideCOS = Tilsides\u00e6t COS
 NAD_ResetToGlobal = Nulstil til global v\u00e6rdi
@@ -1736,6 +1737,7 @@ ERROR_dlWithThisNameExists = Der findes allerede en distributionsliste, ressourc
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Fejl! Opbevaringstid for meddelelse skal v\u00e6re mere end 30 dage!
 ERROR_PASSWORD_REQUIRED = Der skal angives en adgangskode!
 ERROR_PASSWORD_MISMATCH = Adgangskoder stemmer ikke overens!
+ERROR_PASSWORD_CONTAIN_USERNAME = Adgangskoden m\u00e5 ikke indeholde brugernavn.
 ERROR_PASSWORD_TOOLONG = Adgangskoden er for lang!
 ERROR_PASSWORD_TOOSHORT = Adgangskoden er for kort!
 ERROR_PASSWORD_INVALID = Adgangskode er ugyldig
