--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -1186,6 +1186,7 @@ NAD_Remove = Remove
 NAD_ForwardTo = Forward mail to
 NAD_COSName = COS Name
 NAD_PwdLocked = Prevent user from changing password
+NAD_AllowUsernameInPassword = Allow Username in Password
 NAD_ResetToCOS = Reset to COS value
 NAD_OverrideCOS = Override COS
 NAD_ResetToGlobal = Reset to Global value
@@ -1760,6 +1761,7 @@ ERROR_dlWithThisNameExists = Distribution list, resource, alias or account with 
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Error! Message retention time has to be more than 30 days!
 ERROR_PASSWORD_REQUIRED = Must specify a password!
 ERROR_PASSWORD_MISMATCH = Passwords do not match!
+ERROR_PASSWORD_CONTAIN_USERNAME = Password cannot contain username.
 ERROR_PASSWORD_TOOLONG = Password is too long!
 ERROR_PASSWORD_TOOSHORT = Password is too short!
 ERROR_PASSWORD_INVALID = Password is invalid
