--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1191,6 +1191,7 @@ NAD_Remove = Kendu
 NAD_ForwardTo = Birbidali posta honi
 NAD_COSName = Zerbitzu-klasearen izena
 NAD_PwdLocked = Pasahitza blokeatuta
+NAD_AllowUsernameInPassword = Baimendu Erabiltzaile izena pasahitzean
 NAD_ResetToCOS = Leheneratu zerbitzu-klasearen baliora
 NAD_OverrideCOS = Baliogabetu zerbitzu-klasea
 NAD_ResetToGlobal = Berrezarri balio orokorrean
@@ -1765,6 +1766,7 @@ ERROR_dlWithThisNameExists = Jada badago izen bera duen banaketa-zerrenda bat, b
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Errorea! Mezuen atxikitze-denborak 30 egunetik gorakoa izan behar du!
 ERROR_PASSWORD_REQUIRED = Pasahitz bat zehaztu behar duzu!
 ERROR_PASSWORD_MISMATCH = Pasahitzak ez datoz bat!
+ERROR_PASSWORD_CONTAIN_USERNAME = Pasahitzak ezin du erabiltzaile-izenik izan.
 ERROR_PASSWORD_TOOLONG = Pasahitza luzeegia da
 ERROR_PASSWORD_TOOSHORT = Pasahitza laburregia da
 ERROR_PASSWORD_INVALID = Pasahitza ez da baliozkoa
