--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1196,6 +1196,7 @@ NAD_Remove = Supprimer
 NAD_ForwardTo = Transf\u00e9rer le courriel
 NAD_COSName = Nom de la classe COS
 NAD_PwdLocked = Emp\u00eacher l\u2019utilisateur de modifier le mot de passe
+NAD_AllowUsernameInPassword = Autoriser le nom d\u0027utilisateur dans le mot de passe
 NAD_ResetToCOS = R\u00e9initialiser la valeur de la classe COS
 NAD_OverrideCOS = Remplacer classe COS
 NAD_ResetToGlobal = R\u00e9initialiser \u00e0 la valeur globale
@@ -1770,6 +1771,7 @@ ERROR_dlWithThisNameExists = Un groupe, une ressource, un alias ou un compte ave
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Erreur! La dur\u00e9e de vie des messages doit \u00eatre de plus de 30 jours!
 ERROR_PASSWORD_REQUIRED = Vous devez saisir un mot de passe!
 ERROR_PASSWORD_MISMATCH = Les mots de passe sont diff\u00e9rents!
+ERROR_PASSWORD_CONTAIN_USERNAME = Le mot de passe ne peut pas contenir le nom d\u0027utilisateur.
 ERROR_PASSWORD_TOOLONG = Mot de passe trop long.
 ERROR_PASSWORD_TOOSHORT = Mot de passe trop court.
 ERROR_PASSWORD_INVALID = Mot de passe incorrect
