--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -1202,6 +1202,7 @@ NAD_ForwardTo = Forward mail to
 NAD_COSName = COS Name
 NAD_PwdLocked = Prevent user from changing password
 NAD_RejectCommonPwd = Reject common passwords
+NAD_AllowUsernameInPassword = Dopusti korisni\u010dko ime u zaporci
 NAD_ResetToCOS = Reset to COS value
 NAD_OverrideCOS = Override COS
 NAD_ResetToGlobal = Reset to Global value
@@ -1779,6 +1780,7 @@ ERROR_dlWithThisNameExists = Distribution list, resource, alias or account with 
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Error! Message retention time has to be more than 30 days!
 ERROR_PASSWORD_REQUIRED = Must specify a password!
 ERROR_PASSWORD_MISMATCH = Passwords do not match!
+ERROR_PASSWORD_CONTAIN_USERNAME = Lozinka ne mo\u017ee sadr\u017eavati korisni\u010dko ime.
 ERROR_PASSWORD_TOOLONG = Password is too long!
 ERROR_PASSWORD_TOOSHORT = Password is too short!
 ERROR_PASSWORD_INVALID = Password is invalid
