--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -1196,6 +1196,7 @@ NAD_Remove = Elt\u00e1vol\u00edt\u00e1s
 NAD_ForwardTo = Tov\u00e1bb\u00edt\u00e1s adott c\u00edmre
 NAD_COSName = COS-n\u00e9v
 NAD_PwdLocked = Jelsz\u00f3m\u00f3dos\u00edt\u00e1s tilt\u00e1sa a felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra
+NAD_AllowUsernameInPassword = Felhaszn\u00e1l\u00f3n\u00e9v enged\u00e9lyez\u00e9se a Jelsz\u00f3ban
 NAD_ResetToCOS = Vissza\u00e1ll\u00edt\u00e1s a COS-\u00e9rt\u00e9kre
 NAD_OverrideCOS = COS fel\u00fcl\u00edr\u00e1sa
 NAD_ResetToGlobal = Vissza\u00e1ll\u00edt\u00e1s glob\u00e1lis \u00e9rt\u00e9kre
@@ -1770,6 +1771,7 @@ ERROR_dlWithThisNameExists = Ilyen n\u00e9vvel m\u00e1r l\u00e9tezik terjeszt\u0
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Hiba! Az \u00fczenetmegtart\u00e1si id\u0151nek 30 napn\u00e1l hosszabbnak kell lennie!
 ERROR_PASSWORD_REQUIRED = A jelsz\u00f3 megad\u00e1sa k\u00f6telez\u0151!
 ERROR_PASSWORD_MISMATCH = A jelszavak nem egyeznek!
+ERROR_PASSWORD_CONTAIN_USERNAME = A jelsz\u00f3 nem tartalmazhat felhaszn\u00e1l\u00f3nevet.
 ERROR_PASSWORD_TOOLONG = A jelsz\u00f3 t\u00fal hossz\u00fa.
 ERROR_PASSWORD_TOOSHORT = A jelsz\u00f3 t\u00fal r\u00f6vid.
 ERROR_PASSWORD_INVALID = A jelsz\u00f3 \u00e9rv\u00e9nytelen
