--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -1198,6 +1198,7 @@ NAD_Remove = Hapus
 NAD_ForwardTo = Teruskan email ke
 NAD_COSName = Nama COS
 NAD_PwdLocked = Cegah pengguna untuk mengubah kata sandi
+NAD_AllowUsernameInPassword = Izinkan Nama Pengguna dalam Kata Sandi
 NAD_ResetToCOS = Reset ke nilai COS
 NAD_OverrideCOS = Timpa COS
 NAD_ResetToGlobal = Reset ke nilai Global
@@ -1773,6 +1774,7 @@ ERROR_dlWithThisNameExists = Daftar distribusi, sumber, alias atau akun dengan n
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Kesalahan! Masa retensi pesan harus lebih dari 30 hari!
 ERROR_PASSWORD_REQUIRED = Harus tentukan kata sandi!
 ERROR_PASSWORD_MISMATCH = Kata sandi tidak sesuai!
+ERROR_PASSWORD_CONTAIN_USERNAME = Kata sandi tidak boleh berisi nama pengguna.
 ERROR_PASSWORD_TOOLONG = Kata sandi terlalu panjang!
 ERROR_PASSWORD_TOOSHORT = Kata sandi terlalu pendek!
 ERROR_PASSWORD_INVALID = Kata sandi tidak valid
