--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -1169,6 +1169,7 @@ NAD_Remove = Rimuovi
 NAD_ForwardTo = Inoltra posta a
 NAD_COSName = Nome COS
 NAD_PwdLocked = Impedisci all\u2019utente di modificare la password
+NAD_AllowUsernameInPassword = Consenti nome utente in password
 NAD_ResetToCOS = Ripristina valore COS
 NAD_OverrideCOS = Sovrascrivi COS
 NAD_ResetToGlobal = Ripristina valore globale
@@ -1736,6 +1737,7 @@ ERROR_dlWithThisNameExists = Esiste gi\u00e0 una lista di distribuzione, una ris
 ERROR_MESSAGE_LIFETIME_BELOW_31 = I messaggi devono essere preservati per pi\u00f9 di 30 giorni !
 ERROR_PASSWORD_REQUIRED = \u00c8 obbligatorio specificare la password.
 ERROR_PASSWORD_MISMATCH = Le password non corrispondono.
+ERROR_PASSWORD_CONTAIN_USERNAME = La password non pu\u00f2 contenere il nome utente.
 ERROR_PASSWORD_TOOLONG = La password \u00e8 troppo lunga.
 ERROR_PASSWORD_TOOSHORT = La password \u00e8 troppo corta.
 ERROR_PASSWORD_INVALID = Password non valida
