--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1196,6 +1196,7 @@ NAD_Remove = Alih keluar
 NAD_ForwardTo = Majukan mel kepada
 NAD_COSName = Nama COS
 NAD_PwdLocked = Halang pengguna daripada mengubah kata laluan
+NAD_AllowUsernameInPassword = Benarkan Nama Pengguna dalam Kata Laluan
 NAD_ResetToCOS = Tetapkan semula kepada nilai COS
 NAD_OverrideCOS = Langkau COS
 NAD_ResetToGlobal = Tetapkan semula kepada nilai Global
@@ -1770,6 +1771,7 @@ ERROR_dlWithThisNameExists = Senarai edaran, sumber, alias atau akaun dengan nam
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Ralat! Masa pengekalan mesej hendaklah lebih daripada 30 hari!
 ERROR_PASSWORD_REQUIRED = Mesti menentukan kata laluan!
 ERROR_PASSWORD_MISMATCH = Kata laluan tidak sepadan!
+ERROR_PASSWORD_CONTAIN_USERNAME = Kata laluan tidak boleh mengandungi nama pengguna.
 ERROR_PASSWORD_TOOLONG = Kata laluan terlalu panjang!
 ERROR_PASSWORD_TOOSHORT = Kata laluan terlalu pendek!
 ERROR_PASSWORD_INVALID = Kata laluan tidak sah
