--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -1169,6 +1169,7 @@ NAD_Remove = Verwijderen
 NAD_ForwardTo = E-mail doorsturen naar
 NAD_COSName = COS-naam
 NAD_PwdLocked = Voorkomen dat gebruiker wachtwoord kan wijzigen
+NAD_AllowUsernameInPassword = Gebruikersnaam toestaan in wachtwoord
 NAD_ResetToCOS = Opnieuw instellen op COS-waarde
 NAD_OverrideCOS = COS negeren
 NAD_ResetToGlobal = Alg. Waarde opn. Instell.
@@ -1736,6 +1737,7 @@ ERROR_dlWithThisNameExists = Er bestaat reeds een distributielijst met dezelfde 
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Error! Tijd voor behouden van berichten moet langer zijn dan 30 dagen!
 ERROR_PASSWORD_REQUIRED = Wachtwoord opgeven is verplicht!
 ERROR_PASSWORD_MISMATCH = Wachtwoorden komen niet overeen!
+ERROR_PASSWORD_CONTAIN_USERNAME = Wachtwoord mag geen gebruikersnaam bevatten.
 ERROR_PASSWORD_TOOLONG = Wachtwoord is te lang!
 ERROR_PASSWORD_TOOSHORT = Wachtwoord is te kort!
 ERROR_PASSWORD_INVALID = Wachtwoord is ongeldig
