--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1199,6 +1199,7 @@ NAD_Remove = Fjern
 NAD_ForwardTo = Videresend e-post til
 NAD_COSName = Navn p\u00e5 tjenesteklasse
 NAD_PwdLocked = Forhindre at brukeren endrer passord
+NAD_AllowUsernameInPassword = Tillat brukernavn i passord
 NAD_ResetToCOS = Tilbakestill til tjenesteklasseverdi
 NAD_OverrideCOS = Overstyr tjenesteklasse
 NAD_ResetToGlobal = Tilbakestill til global verdi
@@ -1774,6 +1775,7 @@ ERROR_dlWithThisNameExists = Det finnes allerede en distribusjonsliste, en ressu
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Feil! Oppbevaringstiden for meldinger m\u00e5 v\u00e6re over 30 dager.
 ERROR_PASSWORD_REQUIRED = Du m\u00e5 angi et passord.
 ERROR_PASSWORD_MISMATCH = Passordene samsvarer ikke.
+ERROR_PASSWORD_CONTAIN_USERNAME = Passordet kan ikke inneholde brukernavn.
 ERROR_PASSWORD_TOOLONG = Passordet er for langt.
 ERROR_PASSWORD_TOOSHORT = Passordet er for kort.
 ERROR_PASSWORD_INVALID = Passordet er ugyldig
