--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1189,6 +1189,7 @@ NAD_Remove = Usu\u0144
 NAD_ForwardTo = Przeka\u017c poczt\u0119 do
 NAD_COSName = Nazwa COS
 NAD_PwdLocked = Uniemo\u017cliwiaj zmian\u0119 has\u0142a przez u\u017cytkownika
+NAD_AllowUsernameInPassword = Zezw\u00f3l na nazw\u0119 u\u017cytkownika w ha\u015ble
 NAD_ResetToCOS = Resetuj do wart. COS
 NAD_OverrideCOS = Nadpisz COS
 NAD_ResetToGlobal = Resetuj do warto\u015bci globalnej
@@ -1763,6 +1764,7 @@ ERROR_dlWithThisNameExists = Lista dystrybucyjna, zas\u00f3b, alias lub konto o 
 ERROR_MESSAGE_LIFETIME_BELOW_31 = B\u0142\u0105d! Czas przechowywania wiadomo\u015bci musi by\u0107 d\u0142u\u017cszy ni\u017c 30 dni!
 ERROR_PASSWORD_REQUIRED = Musisz poda\u0107 has\u0142o!
 ERROR_PASSWORD_MISMATCH = Has\u0142o do siebie nie pasuj\u0105!
+ERROR_PASSWORD_CONTAIN_USERNAME = Has\u0142o nie mo\u017ce zawiera\u0107 nazwy u\u017cytkownika.
 ERROR_PASSWORD_TOOLONG = Has\u0142o jest zbyt d\u0142ugie!
 ERROR_PASSWORD_TOOSHORT = Has\u0142o jest zbyt kr\u00f3tkie!
 ERROR_PASSWORD_INVALID = Has\u0142o jest niepoprawne
