--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -1199,6 +1199,7 @@ NAD_Remove = Remover
 NAD_ForwardTo = Reencaminhar correio para
 NAD_COSName = Nome do COS
 NAD_PwdLocked = Impedir utilizador de alterar a palavra-passe
+NAD_AllowUsernameInPassword = Permitir nome de usu\u00e1rio na senha
 NAD_ResetToCOS = Redefinir para valor do COS
 NAD_OverrideCOS = Anular COS
 NAD_ResetToGlobal = Redefinir para valor global
@@ -1774,6 +1775,7 @@ ERROR_dlWithThisNameExists = J\u00e1 existe uma lista de distribui\u00e7\u00e3o,
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Erro! O tempo de reten\u00e7\u00e3o das mensagens tem de ser superior a 30 dias!
 ERROR_PASSWORD_REQUIRED = Deve especificar uma palavra-passe!
 ERROR_PASSWORD_MISMATCH = As palavras-passe n\u00e3o coincidem!
+ERROR_PASSWORD_CONTAIN_USERNAME = A senha n\u00e3o pode conter nome de usu\u00e1rio.
 ERROR_PASSWORD_TOOLONG = A palavra-passe \u00e9 demasiado comprida!
 ERROR_PASSWORD_TOOSHORT = A palavra-passe \u00e9 demasiado curta!
 ERROR_PASSWORD_INVALID = A palavra-passe \u00e9 inv\u00e1lida
