--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -1168,6 +1168,7 @@ NAD_Remove = Remover
 NAD_ForwardTo = Encaminhar e-mail para
 NAD_COSName = Nome do COS
 NAD_PwdLocked = Impedir que o usu\u00e1rio altere a senha
+NAD_AllowUsernameInPassword = Permitir nome de usu\u00e1rio na senha
 NAD_ResetToCOS = Restaurar o valor COS
 NAD_OverrideCOS = Ignorar COS
 NAD_ResetToGlobal = Restaurar o valor global
@@ -1735,6 +1736,7 @@ ERROR_dlWithThisNameExists = J\u00e1 existe uma lista de distribui\u00e7\u00e3o,
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Erro! Mensagem de renten\u00e7\u00e3o tem que ser mais de 30 dias!
 ERROR_PASSWORD_REQUIRED = \u00c9 preciso especificar uma senha!
 ERROR_PASSWORD_MISMATCH = As senhas n\u00e3o combinam!
+ERROR_PASSWORD_CONTAIN_USERNAME = A senha n\u00e3o pode conter nome de usu\u00e1rio.
 ERROR_PASSWORD_TOOLONG = Senha muito longa!
 ERROR_PASSWORD_TOOSHORT = Senha muito curta!
 ERROR_PASSWORD_INVALID = Senha inv\u00e1lida
