--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1196,6 +1196,7 @@ NAD_Remove = Eliminare
 NAD_ForwardTo = Redirec\u0163ionare mesaj spre
 NAD_COSName = Nume COS
 NAD_PwdLocked = \u00cempiedic\u0103 utilizatorul s\u0103 schimbe parola
+NAD_AllowUsernameInPassword = Permite\u021bi numele de utilizator \u00een parol\u0103
 NAD_ResetToCOS = Resetare la valoarea COS
 NAD_OverrideCOS = \u00cenlocuire COS
 NAD_ResetToGlobal = Resetare la valoarea global\u0103
@@ -1770,6 +1771,7 @@ ERROR_dlWithThisNameExists = Exist\u0103 deja o list\u0103 de distribu\u0163ie, 
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Eroare! Perioada de re\u0163inere a mesajelor trebuie s\u0103 fie mai lung\u0103 de 30 de zile!
 ERROR_PASSWORD_REQUIRED = Trebuie s\u0103 indica\u0163i o parol\u0103!
 ERROR_PASSWORD_MISMATCH = Parolele nu corespund!
+ERROR_PASSWORD_CONTAIN_USERNAME = Parola nu poate conține numele de utilizator.
 ERROR_PASSWORD_TOOLONG = Parola este prea lung\u0103!
 ERROR_PASSWORD_TOOSHORT = Parola este prea scurt\u0103!
 ERROR_PASSWORD_INVALID = Parola nu este valabil\u0103
