--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1196,6 +1196,7 @@ NAD_Remove = Odstrani
 NAD_ForwardTo = Posreduj po\u0161to na
 NAD_COSName = COS ime
 NAD_PwdLocked = Uporabniku prepre\u010di spreminjanje gesla
+NAD_AllowUsernameInPassword = Dovoli uporabni\u0161ko ime v geslu
 NAD_ResetToCOS = Ponastavi na COS vrednost
 NAD_OverrideCOS = Preglasi COS
 NAD_ResetToGlobal = Ponastavi na globalno vrednost
@@ -1770,6 +1771,7 @@ ERROR_dlWithThisNameExists = Distribucijski seznam, sredstvo, vzdevek, ali ra\u0
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Napaka! \u010cas ohranitve sporo\u010dila mora biti dalj\u0161i od 30 dni!
 ERROR_PASSWORD_REQUIRED = Morate navesti geslo!
 ERROR_PASSWORD_MISMATCH = Gesli se ne ujemata!
+ERROR_PASSWORD_CONTAIN_USERNAME = Geslo ne sme vsebovati uporabni\u0161kega imena.
 ERROR_PASSWORD_TOOLONG = Geslo je predolgo!
 ERROR_PASSWORD_TOOSHORT = Geslo je prekratko!
 ERROR_PASSWORD_INVALID = Geslo ni veljavno
