--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -1169,6 +1169,7 @@ NAD_Remove = Ta bort
 NAD_ForwardTo = Vidarebefordra e-post till
 NAD_COSName = Namn p\u00e5 tj\u00e4nstklass
 NAD_PwdLocked = F\u00f6rhindra att anv\u00e4ndaren \u00e4ndrar l\u00f6senord
+NAD_AllowUsernameInPassword = Till\u00e5t anv\u00e4ndarnamn i l\u00f6senord
 NAD_ResetToCOS = \u00c5terst\u00e4ll till tj\u00e4nstklassv\u00e4rde
 NAD_OverrideCOS = \u00c5sidos\u00e4tt tj\u00e4nstklass
 NAD_ResetToGlobal = \u00c5terst\u00e4ll till globalt v\u00e4rde
@@ -1736,6 +1737,7 @@ ERROR_dlWithThisNameExists = Det finns redan en distributionslista, ett alias el
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Fel. Tiden f\u00f6r meddelandelagring m\u00e5ste vara l\u00e4ngre \u00e4n 30 dagar.
 ERROR_PASSWORD_REQUIRED = Du m\u00e5ste ange ett l\u00f6senord.
 ERROR_PASSWORD_MISMATCH = L\u00f6senorden matchar inte.
+ERROR_PASSWORD_CONTAIN_USERNAME = L\u00f6senordet f\u00e5r inte inneh\u00e5lla anv\u00e4ndarnamn.
 ERROR_PASSWORD_TOOLONG = L\u00f6senordet \u00e4r f\u00f6r l\u00e5ngt.
 ERROR_PASSWORD_TOOSHORT = L\u00f6senordet \u00e4r f\u00f6r kort.
 ERROR_PASSWORD_INVALID = L\u00f6senordet \u00e4r ogiltigt
