--- a/WebRoot/messages/ZaMsg_th.properties
+++ b/WebRoot/messages/ZaMsg_th.properties
@@ -1194,6 +1194,7 @@ NAD_Remove = \u0e40\u0e2d\u0e32\u0e2d\u0e2d\u0e01
 NAD_ForwardTo = \u0e2a\u0e48\u0e07\u0e15\u0e48\u0e2d\u0e08\u0e14\u0e2b\u0e21\u0e32\u0e22\u0e44\u0e1b\u0e22\u0e31\u0e07
 NAD_COSName = \u0e0a\u0e37\u0e48\u0e2d COS
 NAD_PwdLocked = \u0e1b\u0e49\u0e2d\u0e07\u0e01\u0e31\u0e19\u0e44\u0e21\u0e48\u0e43\u0e2b\u0e49\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e40\u0e1b\u0e25\u0e35\u0e48\u0e22\u0e19\u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19
+NAD_AllowUsernameInPassword = \u0e2d\u0e19\u0e38\u0e0d\u0e32\u0e15\u0e0a\u0e37\u0e48\u0e2d\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49\u0e43\u0e19\u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19
 NAD_ResetToCOS = \u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e43\u0e2b\u0e21\u0e48\u0e40\u0e1b\u0e47\u0e19\u0e04\u0e48\u0e32 COS
 NAD_OverrideCOS = \u0e41\u0e17\u0e19\u0e17\u0e35\u0e48 COS
 NAD_ResetToGlobal = \u0e15\u0e31\u0e49\u0e07\u0e04\u0e48\u0e32\u0e43\u0e2b\u0e21\u0e48\u0e40\u0e1b\u0e47\u0e19\u0e04\u0e48\u0e32\u0e2a\u0e48\u0e27\u0e19\u0e01\u0e25\u0e32\u0e07
@@ -1768,6 +1769,7 @@ ERROR_dlWithThisNameExists = \u0e21\u0e35\u0e23\u0e32\u0e22\u0e0a\u0e37\u0e48\u0
 ERROR_MESSAGE_LIFETIME_BELOW_31 = \u0e02\u0e49\u0e2d\u0e1c\u0e34\u0e14\u0e1e\u0e25\u0e32\u0e14! \u0e40\u0e27\u0e25\u0e32\u0e43\u0e19\u0e01\u0e32\u0e23\u0e40\u0e01\u0e47\u0e1a\u0e23\u0e31\u0e01\u0e29\u0e32\u0e02\u0e49\u0e2d\u0e04\u0e27\u0e32\u0e21\u0e15\u0e49\u0e2d\u0e07\u0e21\u0e32\u0e01\u0e01\u0e27\u0e48\u0e32 30 \u0e27\u0e31\u0e19!
 ERROR_PASSWORD_REQUIRED = \u0e15\u0e49\u0e2d\u0e07\u0e23\u0e30\u0e1a\u0e38\u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19!
 ERROR_PASSWORD_MISMATCH = \u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19\u0e44\u0e21\u0e48\u0e15\u0e23\u0e07\u0e01\u0e31\u0e19!
+ERROR_PASSWORD_CONTAIN_USERNAME = \u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19\u0e15\u0e49\u0e2d\u0e07\u0e44\u0e21\u0e48\u0e21\u0e35\u0e0a\u0e37\u0e48\u0e2d\u0e1c\u0e39\u0e49\u0e43\u0e0a\u0e49
 ERROR_PASSWORD_TOOLONG = \u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19\u0e22\u0e32\u0e27\u0e40\u0e01\u0e34\u0e19\u0e44\u0e1b!
 ERROR_PASSWORD_TOOSHORT = \u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19\u0e2a\u0e31\u0e49\u0e19\u0e40\u0e01\u0e34\u0e19\u0e44\u0e1b!
 ERROR_PASSWORD_INVALID = \u0e23\u0e2b\u0e31\u0e2a\u0e1c\u0e48\u0e32\u0e19\u0e44\u0e21\u0e48\u0e16\u0e39\u0e01\u0e15\u0e49\u0e2d\u0e07
