--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -1194,6 +1194,7 @@ NAD_Remove = Kald\u0131r
 NAD_ForwardTo = Postan\u0131n iletilece\u011fi adres:
 NAD_COSName = Hizmet S\u0131n\u0131f\u0131 Ad\u0131
 NAD_PwdLocked = Kullan\u0131c\u0131n\u0131n parolay\u0131 de\u011fi\u015ftirmesini engelle
+NAD_AllowUsernameInPassword = Parolada Kullan\u0131c\u0131 Ad\u0131na \u0130zin Ver
 NAD_ResetToCOS = Hizmet S\u0131n\u0131f\u0131 De\u011ferine S\u0131f\u0131rla
 NAD_OverrideCOS = Hizmet S\u0131n\u0131f\u0131n\u0131 Ge\u00e7ersiz K\u0131l
 NAD_ResetToGlobal = Genel De\u011fere S\u0131f\u0131rla
@@ -1768,6 +1769,7 @@ ERROR_dlWithThisNameExists = Ayn\u0131 ada sahip da\u011f\u0131t\u0131m listesi,
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Hata! Mesaj saklama s\u00fcresi 30 g\u00fcnden fazla olmal\u0131d\u0131r!
 ERROR_PASSWORD_REQUIRED = Parola belirtilmesi gerekiyor!
 ERROR_PASSWORD_MISMATCH = Parolalar e\u015fle\u015fmiyor!
+ERROR_PASSWORD_CONTAIN_USERNAME = Parola\u002c kullan\u0131c\u0131 ad\u0131n\u0131 i\u00e7eremez.
 ERROR_PASSWORD_TOOLONG = Parola \u00e7ok uzun!
 ERROR_PASSWORD_TOOSHORT = Parola \u00e7ok k\u0131sa!
 ERROR_PASSWORD_INVALID = Parola ge\u00e7ersiz
