--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1199,6 +1199,7 @@ NAD_Remove = X\u00f3a
 NAD_ForwardTo = Chuy\u1ec3n ti\u1ebfp th\u01b0 t\u1edbi
 NAD_COSName = T\u00ean l\u1edbp d\u1ecbch v\u1ee5
 NAD_PwdLocked = Ng\u0103n kh\u00f4ng cho ng\u01b0\u1eddi d\u00f9ng thay \u0111\u1ed5i m\u1eadt kh\u1ea9u
+NAD_AllowUsernameInPassword = Cho ph\u00e9p t\u00ean ng\u01b0\u1eddi d\u00f9ng trong m\u1eadt kh\u1ea9u
 NAD_ResetToCOS = \u0110\u1eb7t l\u1ea1i v\u1ec1 gi\u00e1 tr\u1ecb COS
 NAD_OverrideCOS = Ghi \u0111\u00e8 COS
 NAD_ResetToGlobal = \u0110\u1eb7t l\u1ea1i v\u1ec1 gi\u00e1 tr\u1ecb chung
@@ -1774,6 +1775,7 @@ ERROR_dlWithThisNameExists = Danh s\u00e1ch g\u1eedi th\u01b0, t\u00e0i nguy\u00
 ERROR_MESSAGE_LIFETIME_BELOW_31 = L\u1ed7i! Th\u1eddi gian duy tr\u00ec th\u01b0 ph\u1ea3i nhi\u1ec1u h\u01a1n 30 ng\u00e0y!
 ERROR_PASSWORD_REQUIRED = Ph\u1ea3i ch\u1ec9 \u0111\u1ecbnh m\u1ed9t m\u1eadt kh\u1ea9u!
 ERROR_PASSWORD_MISMATCH = M\u1eadt kh\u1ea9u kh\u00f4ng kh\u1edbp!
+ERROR_PASSWORD_CONTAIN_USERNAME = M\u1eadt kh\u1ea9u kh\u00f4ng th\u1ec3 ch\u1ee9a t\u00ean ngư\u1eddi d\u00f9ng.
 ERROR_PASSWORD_TOOLONG = M\u1eadt kh\u1ea9u qu\u00e1 d\u00e0i!
 ERROR_PASSWORD_TOOSHORT = M\u1eadt kh\u1ea9u qu\u00e1 ng\u1eafn!
 ERROR_PASSWORD_INVALID = M\u1eadt kh\u1ea9u kh\u00f4ng h\u1ee3p l\u1ec7
