--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -1188,6 +1188,7 @@ NAD_Remove = \u79fb\u9664
 NAD_ForwardTo = \u8f6c\u53d1\u90ae\u4ef6\u5230
 NAD_COSName = COS \u540d\u79f0
 NAD_PwdLocked = \u9632\u6b62\u7528\u6237\u66f4\u6539\u5bc6\u7801
+NAD_AllowUsernameInPassword = \u5141\u8bb8\u5bc6\u7801\u4e2d\u5305\u542b\u7528\u6237\u540d
 NAD_ResetToCOS = \u91cd\u7f6e\u4e3a COS \u503c
 NAD_OverrideCOS = \u66ff\u4ee3 COS
 NAD_ResetToGlobal = \u91cd\u7f6e\u4e3a\u5168\u5c40\u503c
@@ -1762,6 +1763,7 @@ ERROR_dlWithThisNameExists = \u5177\u6b64\u540d\u79f0\u7684\u901a\u8baf\u7ec4\u5
 ERROR_MESSAGE_LIFETIME_BELOW_31 = \u9519\u8bef! \u8baf\u606f\u4fdd\u7559\u65f6\u95f4\u5fc5\u8981\u591a\u8fc730\u5929\uff01
 ERROR_PASSWORD_REQUIRED = \u5fc5\u987b\u6307\u5b9a\u4e00\u4e2a\u5bc6\u7801\uff01
 ERROR_PASSWORD_MISMATCH = \u5bc6\u7801\u4e0d\u5339\u914d\uff01
+ERROR_PASSWORD_CONTAIN_USERNAME = \u5bc6\u7801\u4e0d\u80fd\u5305\u542b\u7528\u6237\u540d\u3002
 ERROR_PASSWORD_TOOLONG = \u5bc6\u7801\u592a\u957f!
 ERROR_PASSWORD_TOOSHORT = \u5bc6\u7801\u592a\u77ed!
 ERROR_PASSWORD_INVALID = \u5bc6\u7801\u65e0\u6548
