--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -1169,6 +1169,7 @@ NAD_Remove = \u79fb\u9664
 NAD_ForwardTo = \u8f49\u5bc4\u90f5\u4ef6\u81f3
 NAD_COSName = COS \u540d\u7a31
 NAD_PwdLocked = \u9632\u6b62\u7528\u6236\u66f4\u6539\u5bc6\u78bc
+NAD_AllowUsernameInPassword = \u5141\u8a31\u5bc6\u78bc\u4e2d\u5305\u542b\u7528\u6236\u540d
 NAD_ResetToCOS = \u91cd\u8a2d\u70ba COS \u503c
 NAD_OverrideCOS = \u66ff\u4ee3 COS
 NAD_ResetToGlobal = \u91cd\u8a2d\u70ba\u5168\u7db2\u57df\u503c
@@ -1738,6 +1739,7 @@ ERROR_dlWithThisNameExists = \u5177\u6b64\u540d\u7a31\u7684\u5206\u767c\u6e05\u5
 ERROR_MESSAGE_LIFETIME_BELOW_31 = \u932f\u8aa4! \u8a0a\u606f\u4fdd\u7559\u5fc5\u8981\u591a\u904e30\u5929!
 ERROR_PASSWORD_REQUIRED = \u5fc5\u9808\u6307\u5b9a\u4e00\u500b\u5bc6\u78bc\uff01
 ERROR_PASSWORD_MISMATCH = \u5bc6\u78bc\u4e0d\u76f8\u7b26\uff01
+ERROR_PASSWORD_CONTAIN_USERNAME = \u5bc6\u78bc\u4e0d\u80fd\u5305\u542b\u7528\u6236\u540d\u3002
 ERROR_PASSWORD_TOOLONG = \u5bc6\u78bc\u592a\u9577\ufe57
 ERROR_PASSWORD_TOOSHORT = \u5bc6\u78bc\u592a\u77ed\ufe57
 ERROR_PASSWORD_INVALID = \u5bc6\u78bc\u7121\u6548
