--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -1195,6 +1195,7 @@ NAD_Remove = \u79fb\u9664
 NAD_ForwardTo = \u8f49\u5bc4\u90f5\u4ef6\u5230
 NAD_COSName = COS \u540d\u7a31
 NAD_PwdLocked = \u9632\u6b62\u4f7f\u7528\u8005\u8b8a\u66f4\u5bc6\u78bc
+NAD_AllowUsernameInPassword = \u5141\u8a31\u5bc6\u78bc\u4e2d\u5305\u542b\u7528\u6236\u540d
 NAD_ResetToCOS = \u91cd\u8a2d\u70ba COS \u503c
 NAD_OverrideCOS = \u8986\u5beb COS
 NAD_ResetToGlobal = \u91cd\u8a2d\u70ba\u5168\u57df\u503c
@@ -1769,6 +1770,7 @@ ERROR_dlWithThisNameExists = \u5177\u76f8\u540c\u540d\u7a31\u7684\u901a\u8a0a\u7
 ERROR_MESSAGE_LIFETIME_BELOW_31 = \u932f\u8aa4! \u90f5\u4ef6\u4fdd\u7559\u6642\u9593\u5fc5\u9808\u8d85\u904e 30 \u5929!
 ERROR_PASSWORD_REQUIRED = \u5fc5\u9808\u6307\u5b9a\u5bc6\u78bc!
 ERROR_PASSWORD_MISMATCH = \u5bc6\u78bc\u4e0d\u7b26!
+ERROR_PASSWORD_CONTAIN_USERNAME = \u5bc6\u78bc\u4e0d\u80fd\u5305\u542b\u7528\u6236\u540d\u3002
 ERROR_PASSWORD_TOOLONG = \u5bc6\u78bc\u592a\u9577!
 ERROR_PASSWORD_TOOSHORT = \u5bc6\u78bc\u592a\u77ed!
 ERROR_PASSWORD_INVALID = \u5bc6\u78bc\u7121\u6548
