--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -1178,6 +1178,7 @@ NAD_Remove = Entfernen
 NAD_ForwardTo = Mail weiterleiten an
 NAD_COSName = COS-Name
 NAD_PwdLocked = \u00c4nderung des Passworts durch Nutzer verhindern
+NAD_AllowUsernameInPassword = Erlauben Sie den Benutzernamen im Passwort
 NAD_ResetToCOS = Auf COS-Wert zur\u00fccksetzen
 NAD_OverrideCOS = COS \u00fcberschreiben
 NAD_ResetToGlobal = Auf globalen Wert zur\u00fcck
@@ -1745,6 +1746,7 @@ ERROR_dlWithThisNameExists = Es ist bereits ein Verteiler, eine ressource, ein A
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Fehler! Nachrichtenaufbewahrungszeit muss mehr als 30 Tage sein!
 ERROR_PASSWORD_REQUIRED = Sie m\u00fcssen ein Passwort angeben!
 ERROR_PASSWORD_MISMATCH = Die Passw\u00f6rter stimmen nicht \u00fcberein!
+ERROR_PASSWORD_CONTAIN_USERNAME = Das Passwort darf keinen Benutzernamen enthalten.
 ERROR_PASSWORD_TOOLONG = Passwort ist zu lang.
 ERROR_PASSWORD_TOOSHORT = Passwort ist zu kurz.
 ERROR_PASSWORD_INVALID = Ung\u00fcltiges Passwort
