--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -1196,6 +1196,7 @@ NAD_Remove = \u05d4\u05e1\u05e8
 NAD_ForwardTo = \u05d4\u05e2\u05d1\u05e8 \u05d3\u05d5\u05d0\u05e8 \u05d0\u05dc
 NAD_COSName = \u05e9\u05dd \u05e8\u05de\u05ea \u05e9\u05d9\u05e8\u05d5\u05ea
 NAD_PwdLocked = \u05de\u05e0\u05e2 \u05de\u05d4\u05de\u05e9\u05ea\u05de\u05e9 \u05dc\u05e9\u05e0\u05d5\u05ea \u05e1\u05d9\u05e1\u05de\u05d4
+NAD_AllowUsernameInPassword = \u05d0\u05e4\u05e9\u05e8 \u05e9\u05dd \u05de\u05e9\u05ea\u05de\u05e9 \u05d1\u05e1\u05d9\u05e1\u05de\u05d4
 NAD_ResetToCOS = \u05d0\u05e4\u05e1 \u05dc\u05e2\u05e8\u05da \u05e8\u05de\u05ea \u05e9\u05d9\u05e8\u05d5\u05ea
 NAD_OverrideCOS = \u05e2\u05e7\u05d5\u05e3 \u05e8\u05de\u05ea \u05e9\u05d9\u05e8\u05d5\u05ea
 NAD_ResetToGlobal = \u05d0\u05e4\u05e1 \u05dc\u05e2\u05e8\u05da \u05d2\u05dc\u05d5\u05d1\u05dc\u05d9
@@ -1770,6 +1771,7 @@ ERROR_dlWithThisNameExists = \u05db\u05d1\u05e8 \u05e7\u05d9\u05d9\u05dd \u05de\
 ERROR_MESSAGE_LIFETIME_BELOW_31 = \u05e9\u05d2\u05d9\u05d0\u05d4! \u05de\u05e9\u05da \u05e9\u05de\u05d9\u05e8\u05ea \u05d4\u05d4\u05d5\u05d3\u05e2\u05d5\u05ea \u05d7\u05d9\u05d9\u05d1 \u05dc\u05d4\u05d9\u05d5\u05ea \u05d2\u05d3\u05d5\u05dc \u05de-30 \u05d9\u05d5\u05dd!
 ERROR_PASSWORD_REQUIRED = \u05d9\u05e9 \u05dc\u05e6\u05d9\u05d9\u05df \u05e1\u05d9\u05e1\u05de\u05d4!
 ERROR_PASSWORD_MISMATCH = \u05d4\u05e1\u05d9\u05e1\u05de\u05d0\u05d5\u05ea \u05d0\u05d9\u05e0\u05df \u05ea\u05d5\u05d0\u05de\u05d5\u05ea!
+ERROR_PASSWORD_CONTAIN_USERNAME = \u05d4\u05e1\u05d9\u05e1\u05de\u05d4 \u05dc\u05d0 \u05d9\u05db\u05d5\u05dc\u05d4 \u05dc\u05d4\u05db\u05d9\u05dc \u05e9\u05dd \u05de\u05e9\u05ea\u05de\u05e9.
 ERROR_PASSWORD_TOOLONG = \u05d4\u05e1\u05d9\u05e1\u05de\u05d4 \u05d0\u05e8\u05d5\u05db\u05d4 \u05de\u05d3\u05d9!
 ERROR_PASSWORD_TOOSHORT = \u05d4\u05e1\u05d9\u05e1\u05de\u05d4 \u05e7\u05e6\u05e8\u05d4 \u05de\u05d3\u05d9!
 ERROR_PASSWORD_INVALID = \u05e1\u05d9\u05e1\u05de\u05d4 \u05dc\u05d0-\u05d7\u05d5\u05e7\u05d9\u05ea
