--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -1178,6 +1178,7 @@ NAD_Remove = \u524a\u9664
 NAD_ForwardTo = \u30e1\u30fc\u30eb\u306e\u8ee2\u9001\u5148
 NAD_COSName = \u63d0\u4f9b\u30b5\u30fc\u30d3\u30b9\u540d
 NAD_PwdLocked = \u30e6\u30fc\u30b6\u30fc\u304c\u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u5909\u66f4\u3057\u306a\u3044\u3088\u3046\u306b\u3059\u308b
+NAD_AllowUsernameInPassword = \u30d1\u30b9\u30ef\u30fc\u30c9\u306b\u30e6\u30fc\u30b6\u30fc\u540d\u3092\u542b\u3081\u308b\u3053\u3068\u3092\u8a31\u53ef
 NAD_ResetToCOS = \u63d0\u4f9b\u30b5\u30fc\u30d3\u30b9\u306e\u5024\u306b\u30ea\u30bb\u30c3\u30c8
 NAD_OverrideCOS = \u63d0\u4f9b\u30b5\u30fc\u30d3\u30b9\u3092\u7121\u8996
 NAD_ResetToGlobal = \u30b0\u30ed\u30fc\u30d0\u30eb\u5024\u306b\u30ea\u30bb\u30c3\u30c8
@@ -1750,6 +1751,7 @@ ERROR_dlWithThisNameExists = \u540c\u3058\u540d\u524d\u306e\u914d\u5e03\u30ea\u3
 ERROR_MESSAGE_LIFETIME_BELOW_31 = \u30a8\u30e9\u30fc\uff01\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u4fdd\u7ba1\u671f\u9593\u3092\uff13\uff10\u65e5\u4ee5\u4e0a\u306b\u8a2d\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 ERROR_PASSWORD_REQUIRED = \u30d1\u30b9\u30ef\u30fc\u30c9\u3092\u6307\u5b9a\u3057\u3066\u304f\u3060\u3055\u3044\uff01
 ERROR_PASSWORD_MISMATCH = \u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u4e00\u81f4\u3057\u307e\u305b\u3093\uff01
+ERROR_PASSWORD_CONTAIN_USERNAME = \u30d1\u30b9\u30ef\u30fc\u30c9\u306b\u30e6\u30fc\u30b6\u30fc\u540d\u3092\u542b\u3081\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093\u3002
 ERROR_PASSWORD_TOOLONG = \u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u9577\u3059\u304e\u307e\u3059\uff01
 ERROR_PASSWORD_TOOSHORT = \u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u77ed\u3059\u304e\u307e\u3059\uff01
 ERROR_PASSWORD_INVALID = \u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u7121\u52b9\u3067\u3059
