--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -1177,6 +1177,7 @@ NAD_Remove = \uc81c\uac70
 NAD_ForwardTo = \uba54\uc77c \uc804\ub2ec\ucc98:
 NAD_COSName = \uc11c\ube44\uc2a4 \ub4f1\uae09 \uc774\ub984
 NAD_PwdLocked = \uc0ac\uc6a9\uc790\uac00 \ube44\ubc00\ubc88\ud638\ub97c \ubcc0\uacbd\ud558\uc9c0 \ubabb\ud558\uac8c \ud569\ub2c8\ub2e4.
+NAD_AllowUsernameInPassword = \uc554\ud638\uc5d0 \uc0ac\uc6a9\uc790 \uc774\ub984 \ud5c8\uc6a9
 NAD_ResetToCOS = \uc11c\ube44\uc2a4 \ub4f1\uae09 \uac12\uc73c\ub85c \uc7ac\uc124\uc815
 NAD_OverrideCOS = \uc11c\ube44\uc2a4 \ub4f1\uae09 \ubb34\uc2dc
 NAD_ResetToGlobal = \uc804\uc5ed \uac12\uc73c\ub85c \uc7ac\uc124\uc815
@@ -1744,6 +1745,7 @@ ERROR_dlWithThisNameExists = \uac19\uc740 \uc774\ub984\uc744 \uac00\uc9c4 \uadf8
 ERROR_MESSAGE_LIFETIME_BELOW_31 = \uc624\ub958! \uba54\uc2dc\uc9c0 \ubcf4\uc874 \uae30\uac04\uc740 30\uc77c \uc774\uc0c1\uc774\uc5b4\uc57c \ud569\ub2c8\ub2e4.
 ERROR_PASSWORD_REQUIRED = \ube44\ubc00\ubc88\ud638\ub97c \uc9c0\uc815\ud574\uc57c \ud569\ub2c8\ub2e4!
 ERROR_PASSWORD_MISMATCH = \ube44\ubc00\ubc88\ud638\uac00 \uc77c\uce58\ud558\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4!
+ERROR_PASSWORD_CONTAIN_USERNAME = \ube44\ubc00\ubc88\ud638\ub294 \uc0ac\uc6a9\uc790 \uc774\ub984\uc744 \ud3ec\ud568\ud560 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
 ERROR_PASSWORD_TOOLONG = \ube44\ubc00\ubc88\ud638\uac00 \ub108\ubb34 \uae41\ub2c8\ub2e4.
 ERROR_PASSWORD_TOOSHORT = \ube44\ubc00\ubc88\ud638\uac00 \ub108\ubb34 \uc9e7\uc2b5\ub2c8\ub2e4.
 ERROR_PASSWORD_INVALID = \ube44\ubc00\ubc88\ud638\uac00 \uc62c\ubc14\ub974\uc9c0 \uc54a\uc2b5\ub2c8\ub2e4.
