--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -1196,6 +1196,7 @@ NAD_Remove = \u0e96\u0ead\u0e99\u200b\u0ead\u0ead\u0e81
 NAD_ForwardTo = \u0eaa\u0ebb\u0ec8\u0e87\u200b\u200b\u0e88\u0ebb\u0e94\u0edd\u0eb2\u0e8d\u0e95\u0ecd\u0ec8\u200b\u0eab\u0eb2
 NAD_COSName = \u0e8a\u0eb7\u0ec8 COS 
 NAD_PwdLocked = \u0e9b\u0ec9\u0ead\u0e87\u200b\u0e81\u0eb1\u0e99\u200b\u0e9c\u0eb9\u0ec9\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e88\u0eb2\u0e81\u200b\u0e81\u0eb2\u0e99\u200b\u0e9b\u0ec8\u0ebd\u0e99\u200b\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99
+NAD_AllowUsernameInPassword = \u0ead\u0eb0\u0e99\u0eb8\u0e8d\u0eb2\u0e94\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9\u0ec3\u0e99\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0ec8\u0eb2\u0e99
 NAD_ResetToCOS = \u0e9b\u0eb1\u0e9a\u200b\u0e84\u0ec8\u0eb2 COS \u0e84\u0eb7\u0e99
 NAD_OverrideCOS = \u0e8d\u0ebb\u0e81\u0ec0\u0ea5\u0eb5\u0e81 COS
 NAD_ResetToGlobal = \u0e9b\u0eb1\u0e9a\u200b\u0e84\u0ec8\u0eb2\u200b\u0e97\u0ebb\u0ec8\u0ea7\u200b\u0ea5\u0eb0\u0e9a\u0ebb\u0e9a\u200b\u0e84\u0eb7\u0e99
@@ -1770,6 +1771,7 @@ ERROR_dlWithThisNameExists = \u0ea5\u0eb2\u0e8d\u0e8a\u0eb7\u0ec8\u200b\u0ec1\u0
 ERROR_MESSAGE_LIFETIME_BELOW_31 = \u0e82\u0ecd\u0ec9\u0e9c\u0eb4\u0e94\u0e9e\u0eb2\u0e94! \u200b\u0ec0\u0ea7\u0ea5\u0eb2\u200b\u200b\u200b\u0ec3\u0e99\u200b\u0e81\u0eb2\u0e99\u0e9a\u0eb1\u0e99\u0e97\u0eb6\u0e81\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1\u200b\u0ec4\u0ea7\u0ec9\u200b\u0e95\u0ec9\u0ead\u0e87\u0eab\u0ea5\u0eb2\u0e8d\u200b\u0e81\u0ec8\u0ea7\u0eb2 30 \u0ea7\u0eb1\u0e99!
 ERROR_PASSWORD_REQUIRED = \u0e95\u0ec9\u0ead\u0e87\u200b\u0ea5\u0eb0\u0e9a\u0eb8\u200b\u0ea5\u0eb0\u0eab\u0eb1\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99!
 ERROR_PASSWORD_MISMATCH = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0e9a\u0ecd\u0ec8\u200b\u0e96\u0eb7\u0e81!
+ERROR_PASSWORD_CONTAIN_USERNAME = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u0e9c\u0ec8\u0eb2\u0e99\u0e9a\u0ecd\u0ec8\u0eaa\u0eb2\u0ea1\u0eb2\u0e94\u0ea1\u0eb5\u0e8a\u0eb7\u0ec8\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9\u0ec4\u0e94\u0ec9.
 ERROR_PASSWORD_TOOLONG = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0e8d\u0eb2\u0ea7\u200b\u0ec2\u0e9e\u0e94!
 ERROR_PASSWORD_TOOSHORT = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0eaa\u0eb1\u0ec9\u0e99\u200b\u0ec2\u0e9e\u0e94!
 ERROR_PASSWORD_INVALID = \u0ea5\u0eb0\u0eab\u0eb1\u0e94\u200b\u0e9c\u0ec8\u0eb2\u0e99\u200b\u0e9a\u0ecd\u0ec8\u200b\u0e96\u0eb7\u0e81\u0e95\u0ec9\u0ead\u0e87
